<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App related -->
    <string name="app_name">Football Scores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>

    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>
    <string name="share_button">Share Button</string>
    <string name="about_text_field">About Text Field</string>
    <string name="empty_text">No Game Today</string>
    <string name="empty_textview">Empty Text Field</string>

    <!-- Match related -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league">UEFA Champions League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="premierleague">Premier League</string>
    <string name="primeradivison">Primera Division</string>
    <string name="seriaa">Serie A</string>
    <string name="matchday_text">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="home_crest">Crest of Home Team</string>
    <string name="away_crest">Crest of Away Team</string>
    <string name="league_name">League Name</string>
    <string name="matchday">Matchday</string>
    <string name="home_team_name">Home Team Name</string>
    <string name="match_score">Match Score</string>
    <string name="match_time">Match Time</string>
    <string name="away_team_name">Away Team Name</string>

    <!-- Widget -->
    <string name="widget_text">This is a widget probably.</string>
    <string name="widget_home_team_name">Widget Home Team Name</string>
    <string name="widget_away_team_name">Widget Away Team Name</string>
    <string name="widget_home_team_crest">Widget Home Team Crest</string>
    <string name="widget_away_team_crest">Widget Away Team Crest</string>
    <string name="widget_match_score">Widget Match Score</string>
    <string name="widget_home_team_score">Widget Home Team Score</string>
    <string name="widget_away_team_score">Widget Away Team Score</string>
    <string name="widget_empty_text">No Game Today</string>
    <string name="widget_empty_textview">Widget Empty Text</string>
    <string name="widget_detail_title">Detail</string>
    <string name="add_widget">Add widget</string>

    <!-- Layout -->
    <string name="layout_match_detail">Match Details Layout</string>
    <string name="layout_match_league_stage">League and Stage Layout</string>
    <string name="layout_share">Match Share Layout</string>
    <string name="layout_about_activity">About Activity Layout</string>
    <string name="layout_main_activity">Main Activity Layout</string>
    <string name="layout_about_fragment">About Fragment Layout</string>
    <string name="layout_main_fragment">Main Fragment Layout</string>
    <string name="layout_pager_fragment">Pager Fragment Layout</string>
    <string name="layout_view_pager_header">View Pager Header Layout</string>
    <string name="layout_view_pager_fragment">View Pager Fragment</string>
    <string name="layout_single_widget">Single Widget Layout</string>
    <string name="layout_single_widget_team_name">Single Widget Teamname Layout</string>
    <string name="layout_match_score_item">Match Score Item Layout</string>
    <string name="layout_home_team_score_item">Home Team Score Item Layout</string>
    <string name="layout_match_score_detail_item">Match Score Detail Item Layout</string>
    <string name="layout_away_team_score_item">Away Team Score Item Layout</string>
    <string name="layout_match_detail_item">Match Detail Item Layout</string>
    <string name="layout_match_item">Match Item Layout</string>
    <string name="layout_widget_collection">Widget Collection Layout</string>
    <string name="layout_widget_collection_header">Widget Collection Header Layout</string>
    <string name="layout_widget_collection_list">Widget Collection List Layout</string>
    <string name="layout_widget_collection_item">Widget Collection Item Layout</string>
    <string name="layout_widget_item">Widget Item Layout</string>
    <string name="layout_widget_item_crests">Widget Item Crests Layout</string>
    <string name="layout_widget_item_team_name">Widget Item Team Name Layout</string>
    <string name="layout_widget_item_scores">Widget Item Scores Layout</string>

</resources>
