<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:contentDescription="@string/layout_match_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/layout_match_league_stage">

        <TextView
            android:id="@+id/league_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/league_text_size"
            android:contentDescription="@string/league_name" />

        <TextView
            android:id="@+id/matchday_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/league_text_size"
            android:contentDescription="@string/matchday" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/layout_share">

        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:drawableStart="@android:drawable/ic_menu_share"
            android:gravity="center"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:text="@string/share_text"
            android:contentDescription="@string/share_button" />
    </FrameLayout>

</LinearLayout>