<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/list_horizontal_margin"
    android:layout_marginRight="@dimen/list_horizontal_margin"
    android:layout_marginStart="@dimen/list_horizontal_margin"
    android:layout_marginEnd="@dimen/list_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:contentDescription="@string/layout_main_fragment">

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/empty_textview"
        android:fontFamily="sans-serif-light"
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/empty_text"
        android:textAppearance="?android:textAppearanceLarge" />

    <ListView
        android:id="@+id/scores_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="15sp" />

</FrameLayout>
